2007-08-01  Ben Motmans <ben.motmans@gmail.com>

	* MySqlSchemaProvider.cs: Catch exceptions and notify the user and various
	small bugfixes

2007-07-31  Ben Motmans <ben.motmans@gmail.com>

	* MySqlDbFactory.cs, MySqlGuiProvider.cs: Added a GuiProvider
	* MySqlSchemaProvider.cs: Implemented CreateTable

2007-07-25  Ben Motmans <ben.motmans@gmail.com>

	* MySqlPooledDbConnection.cs: expose the GetSchema method of the internal connection
	* MySqlDbFactory.cs, MySqlSchemaProvider.cs: improved metadata support

2007-07-18  Ben Motmans <ben.motmans@gmail.com>

	* MySqlSchemaProvider.cs: SupportsSchemaOperation implementation, use of strongly typed
	collections, Drop* and Rename* implementations

2007-07-17  Ben Motmans <ben.motmans@gmail.com>

	* Makefile.am: initial makefile
	* MySqlDbFactory.cs: implemented methods required for the connection settings dialog
	* MySqlSchemaProvider.cs: implemented GetDataType method

2007-07-15  Ben Motmans <ben.motmans@gmail.com>

	* MySqlDialect.cs: dialect implementation with keyword detection
	* MySqlDbFactory.cs: use MySqlDialect instead of the obsolete Sql99Dialect

2007-07-14  Ben Motmans <ben.motmans@gmail.com>

	* MySqlConnectionProvider.cs, MySqlDbFactory.cs, MySqlSchemaProvider.cs: small changes
	to reflect API changes
	* MySqlPooledDbConnection.cs: implementation of ConnectionPool aware connection
	

2007-07-10  Ben Motmans <ben.motmans@gmail.com>

	* MySqlConnectionProvider.cs: set IsConnectionError property

2007-07-05  Ben Motmans <ben.motmans@gmail.com>

	* MySqlConnectionProvider.cs: ExecuteQueryAsDataSet and ExecuteQueryAsDataTable implementation
	* MySqlDbFactory.cs: specified the ISqlDialect and added default connection settings
	* Mono.Data.Sql.MySql.mdp: switched from the old ByteFX.Data provider to the new MySql.Data

2007-07-02  Ben Motmans <ben.motmans@gmail.com>

	* MySqlSchemaProvider.cs: 
	Fixed several compilation issues
	Added Close () statements when the IDataReader is no longer needed
